--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,79 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+main {
+  width: 100%;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.main {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  background-color: #f0f2f5;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar {
+  height: 50px;
+  width: 100%;
+  background-color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin: 0px 20px;
+  height: 90px;
 }
 
-.card {
-  padding: 2em;
+nav {
+  display: flex;
+  width: 240px;
+  height: 100%;
+  flex-direction: column;
+  gap: 10px;
+  padding: 16px;
+  color: white;
+  background-color: #2f4050;
 }
 
-.read-the-docs {
-  color: #888;
+nav a {
+  text-decoration: none;
+  gap: 10px;
+  display: flex;
+  align-items: center;
+}
+
+nav a:hover {
+  background-color: #305375;
+}
+
+.DialogOverlay {
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  inset: 0;
+  animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+.DialogTrigger {
+  height: 34px;
+  width: 34px;
+  background-color: #0073ea;
+  border-color: transparent;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+}
+
+.DialogContent {
+  background-color: white;
+  border-radius: 6px;
+  box-shadow: var(--shadow-6);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-height: 90vh;
+  padding: 25px;
+  animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+.DialogContent:focus {
+  outline: none;
 }
