--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,6 +23,35 @@ main {
   height: 90px;
 }
 
+.card {
+  background-color: white;
+  border-radius: 4px;
+  padding: 20px;
+  margin: 0px 20px;
+  overflow-y: auto;
+  height: calc(100vh - 160px);
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table thead tr th {
+  background-color: rgb(221, 221, 221);
+  font-weight: normal;
+  text-align: left;
+  padding: 4px 6px;
+}
+
+table tbody tr:hover {
+  background-color: rgb(221, 221, 221);
+}
+
+table tbody tr td {
+  padding: 4px 6px;
+}
+
 nav {
   display: flex;
   width: 240px;
@@ -71,9 +100,47 @@ nav a:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   max-height: 90vh;
+  min-width: 700px;
   padding: 25px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .DialogContent:focus {
   outline: none;
+}
+
+.DialogContent form {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+.DialogContent form div {
+  display: flex;
+  height: 36px;
+  align-items: center;
+}
+.DialogContent form div label {
+  width: 100px;
+}
+.DialogContent form div input {
+  height: 36px;
+  border-radius: 4px;
+  outline: none;
+  padding: 0px 6px;
+}
+.DialogContent form button {
+  height: 36px;
+  width: 400px;
+  border-radius: 4px;
+  outline: none;
+  padding: 0px 6px;
+  background-color: #0073ea;
+  color: white;
+  box-shadow: none;
+  border-color: #0073ea;
+  margin-top: 40px;
 }
